--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,3 +7,7 @@ jobs:
       image: ubuntu-1604-cuda-10.1:201909-23
     steps:
       - run: nvidia-smi
+      - run: |
+          git clone https://github.com/ultralytics/yolov5
+          cd yolov5
+          pip install -qr requirements.txt
