--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ jobs:
       - run: |
           git clone https://github.com/ultralytics/yolov5
           cd yolov5
+          pip install pipenv
           pipenv --python 3.7
           pipenv install -r ./requirements.txt
           cd ..
