--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ workflows:
 jobs:
   setup_environment:
     docker:
-      - image: cimg/python3.7.11
+      - image: cimg/python:3.7.11
         auth:
           username: $DOCKER_HUB_USERNAME
           password: $DOCKER_HUB_ACCESS_TOKEN
