Fixed a job name.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,7 +59,7 @@ jobs:
           root: .
           paths:
             - "MaskDataSet"
-  train_with_gpu:
+  train_maskdataset_with_gpu:
     machine:
       resource_class: gpu.nvidia.small
       image: ubuntu-1604-cuda-10.1:201909-23
