--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
             cd yolov5
             pyenv install 3.7.6
             pyenv local 3.7.6
-            pip install -r requirements.txt
+            pip install -qr requirements.txt
             cd ..
       - persist_to_workspace:
           root: .
@@ -64,18 +64,24 @@ jobs:
       resource_class: gpu.nvidia.small
       image: ubuntu-1604-cuda-10.1:201909-23
     steps:
-      - run: nvidia-smi
+      - run:
+          name: Check GPU status
+          command:  nvidia-smi
       - attach_workspace:
           at: .
-      - run: |
-          cd yolov5
-          pyenv install 3.7.6
-          pyenv local 3.7.6
-          pip install -r requirements.txt
-          cd ..
-      - run: |
-          cd yolov5
-          python train.py --data ../MaskDataSet/data.yaml --cfg yolov5s.yaml --weights yolov5s.pt --batch-size 16 --epochs 10
+      - run:
+          name: Setup up Python environment for YOLOv5
+          command: |
+            cd yolov5
+            pyenv install 3.7.6
+            pyenv local 3.7.6
+            pip install -qr requirements.txt
+            cd ..
+      - run:
+          name: Train MaskDataSet
+          command: |
+            cd yolov5
+            python train.py --data ../MaskDataSet/data.yaml --cfg yolov5s.yaml --weights yolov5s.pt --batch-size 16 --epochs 10
       - persist_to_workspace:
           root: .
           paths:
