--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,11 +26,6 @@ jobs:
           name: Set up YOLOv5 setup_environment
           command: |
             git clone https://github.com/ultralytics/yolov5
-            cd yolov5
-            pyenv install 3.7.6
-            pyenv local 3.7.6
-            pip install -qr requirements.txt
-            cd ..
       - persist_to_workspace:
           root: .
           paths:
@@ -71,10 +66,11 @@ jobs:
       - run:
           name: Setup up Python environment for YOLOv5
           command: |
+            cd ~/.pyenv/plugins/python-build/../.. && git pull && cd -
             cd yolov5
-            pyenv install 3.7.6
-            pyenv local 3.7.6
-            pip install -qr requirements.txt
+            pyenv install 3.7.11
+            pyenv local 3.7.11
+            pip install -r requirements.txt
             cd ..
       - run:
           name: Train MaskDataSet
