--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
       - run:
           name: Setup up Python environment for YOLOv5
           command: |
-            cd ~/.pyenv/plugins/python-build/../.. && git pull && cd -
+            cd /opt/circleci/.pyenv/plugins/python-build/../.. && git pull && cd -
             cd yolov5
             pyenv install 3.7.11
             pyenv local 3.7.11
