Added checkout in setup_yorov5 to get branch info

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,7 @@ jobs:
           username: $DOCKER_HUB_USERNAME
           password: $DOCKER_HUB_ACCESS_TOKEN
     steps:
+      - checkout
       - run:
           name: Clone YOLOv5 resources
           command: |
