--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
             git clone https://github.com/ultralytics/yolov5
       - restore_cache:
           keys:
-            - pip- {{ .Branch }} - {{ checksum "yolov5/requirement.txt" }}
+            - pip- {{ .Branch }} - {{ checksum "yolov5/requirements.txt" }}
       - run:
           name: Setup up Python environment for YOLOv5
           command: |
@@ -39,7 +39,7 @@ jobs:
             pip install -r requirements.txt
             cd ..
       - save_cache:
-          key: pip- {{ .Branch }} - {{ checksum "yolov5/requirement.txt" }}
+          key: pip- {{ .Branch }} - {{ checksum "yolov5/requirements.txt" }}
           paths:
             - /home/circleci/.cache/pip
             - /home/circleci/.pyenv/versions/
@@ -95,7 +95,7 @@ jobs:
             fi
       - restore_cache:
           keys:
-            - pip- {{ .Branch }} - {{ checksum "yolov5/requirement.txt" }}
+            - pip- {{ .Branch }} - {{ checksum "yolov5/requirements.txt" }}
       - run:
           name: Setup up Python environment for YOLOv5
           command: |
@@ -106,7 +106,7 @@ jobs:
             pip install -r requirements.txt
             cd ..
       - save_cache:
-          key: pip- {{ .Branch }} - {{ checksum "yolov5/requirement.txt" }}
+          key: pip- {{ .Branch }} - {{ checksum "yolov5/requirements.txt" }}
           paths:
             - /home/circleci/.cache/pip
             - /home/circleci/.pyenv/versions/
