--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ jobs:
           name: Setup up Python environment for YOLOv5
           command: |
             cd yolov5
-            if [ ! -d ~/.pyenv/version/3.7.11 ]; then
+            if [ ! -d /home/circleci/.pyenv/version/3.7.11 ]; then
               pyenv install 3.7.11
             fi
             pyenv local 3.7.11
@@ -103,7 +103,7 @@ jobs:
           command: |
             cd /opt/circleci/.pyenv/plugins/python-build/../.. && git pull && cd -
             cd yolov5
-            if [ ! -d ~/.pyenv/version/3.7.11 ]; then
+            if [ ! -d /home/circleci/.pyenv/version/3.7.11 ]; then
               pyenv install 3.7.11
             fi
             pyenv local 3.7.11
