--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -119,7 +119,7 @@ jobs:
       - attach_workspace:
           at: .
       - run:
-          name: Check if the commit message includes 'kick-training' to continue this job
+          name: Check if the commit message includes 'kick-detection' to continue this job
           command: |
             COMMIT_MESSAGE=$(git log -1 HEAD --pretty=format:%s)
             TRIGGER_MATCH_PATTERN="^.*kick-detection.*$"
