Fixed artifact location

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -139,5 +139,5 @@ jobs:
             python detect.py --weights ./runs/train/exp/weights/best.pt --img 640 --conf 0.25 --source ../images/no_mask.jpg
             zip -r runs/detect.zip runs/detect
       - store_artifacts:
-          path: runs/detect.zip
+          path: yolov5/runs/detect.zip
           destination: detect-gpu.zip
