--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,9 +13,9 @@ workflows:
           requires:
             - setup_yorov5
             - setup_maskdataset
-#      - test_detection_with_gpu:
-#          requires:
-#            - train_maskdataset_with_gpu
+      - test_detection_with_gpu:
+          requires:
+            - train_maskdataset_with_gpu
       - test_detection_with_raspi:
           requires:
             - train_maskdataset_with_gpu
@@ -95,7 +95,7 @@ jobs:
           name: Train MaskDataSet
           command: |
             cd yolov5
-            python train.py --data ../MaskDataSet/data.yaml --cfg yolov5s.yaml --weights yolov5s.pt --batch-size 16 --epochs 10
+            python train.py --data ../MaskDataSet/data.yaml --cfg yolov5s.yaml --weights yolov5s.pt --batch-size 16 --epochs 100
             cd ..
       - persist_to_workspace:
           root: .
